			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

24-Nov-2004
~~~~~~~~~~~
Method of scaling pinboard images is now an option, as the default could
produce poor results on some systems (Stephen Watson).

22-Nov-2004
~~~~~~~~~~~
Updated it.po and Manual-it.xml (Yuri Bongiorno)

19-Nov-2004
~~~~~~~~~~~
Bugfix: Dragging a lasso box above the top of the window in details mode
	selected all the items outside the box (Thomas Leonard; reported by
	Anthony DiSante).

12-Nov-2004
~~~~~~~~~~~
Only show executable files in green if clicking would actually run them, not
just because they have the execute bit set (Thomas Leonard).

11-Nov-2004
~~~~~~~~~~~
Much faster thumbnail generation (Ken Hayber, reported by Anthony DiSante).

08-Nov-2004
~~~~~~~~~~~
When closing a filer window showing a directory under a user-mounted
mount-point, offer to unmount the device if no other filer window also shows
that mount point (requested by Tony Houghton and others). Also do this check
when changing to a parent directory.
Scale iconified window icons on the pinboard down to normal size (Ken Hayber).

08-Nov-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

07-Nov-2004
~~~~~~~~~~~
Work on the action box, including a progress bar (Stephen Watson).

24-Oct-2004
~~~~~~~~~~~
Added PinboardRemove() SOAP call (Stephen Watson).

20-Oct-2004 (Release 2.1.4)
~~~~~~~~~~~
Added Portuguese translation (Rodrigo Cesar Herefeld).

16-Oct-2004
~~~~~~~~~~~
Some improvements to saved display settings (Takuo Yonezawa and Stephen 
Watson).
Updated Spanish translation (Marcelo Ramos).

15-Oct-2004
~~~~~~~~~~~
Allow multiple arguments for executable pinboard and panel icons (Thomas
Leonard).
Updated it.po and Manual-it (Yuri Bongiorno).

12-Oct-2004
~~~~~~~~~~~
Use a higher quality setting when scaling the backdrop image (Ken Hayber).

06-Oct-2004
~~~~~~~~~~~
Added PanelRemove() SOAP call (Sabin Iacob).
Bugfix: Mounting a directory that was accessed through a symlinked directory