@@ -26,6 +26,8 @@ typedef enum
 	 * being added to the queue more than once at a time.
 	 */
 	ITEM_FLAG_NEED_RESCAN_QUEUE = 0x100,
+	
+	ITEM_FLAG_HAS_XATTR      = 0x200, /* Has extended attributes set */
 } ItemFlags;
 
 struct _DirItem
