@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+25-Nov-2004
+~~~~~~~~~~~
+More extended attribute support.  The "Set Type..." menu item should be 
+disabled if not supported by the system or FS (Stephen Watson).
+
 24-Nov-2004
 ~~~~~~~~~~~
 Method of scaling pinboard images is now an option, as the default could
